zero-schema-derive/tests/ui/fail/13_macro_type.rs
use zero_schema_derive::ZeroSchema; macro_rules! ty {()=>{u32}} #[derive(ZeroSchema)] struct Bad { x:ty!() } fn main() {}
