zero-schema-derive/tests/ui/fail/13_macro_type.stderr
error: macros are not supported in syntax moved into generated code
 --> tests/ui/fail/13_macro_type.rs:1:102
  |
1 | use zero_schema_derive::ZeroSchema; macro_rules! ty {()=>{u32}} #[derive(ZeroSchema)] struct Bad { x:ty!() } fn main() {}
  |                                                                                                      ^^

error: type macros are not supported
 --> tests/ui/fail/13_macro_type.rs:1:102
  |
1 | use zero_schema_derive::ZeroSchema; macro_rules! ty {()=>{u32}} #[derive(ZeroSchema)] struct Bad { x:ty!() } fn main() {}
  |                                                                                                      ^^
